code cleaned, names fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Kotlin-TabLayout</string>
+    <string name="app_name">Tesis Diabetes</string>
 
     <string name="title_home">Registro</string>
     <string name="title_aboutUs">Alarmas</string>
